Move values calc to HealthApiFeatureSetUsage